2023/Q2/kubernetes-training/003-deploy/slke/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat
spec:
  selector:
    name: tomcat
  type: ClusterIP
  ports:
    - port: 8080
